[package]
name = "halo2_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.11"
halo2_proofs_pse = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_06_03" }
halo2_proofs_zcash = { package = "halo2_proofs", git = "https://github.com/zcash/halo2.git", branch = "main"}
rand = "0.8"
rand_chacha = "0.3.0"
